fix nowrap

--- a/angular-app/src/styles.scss
+++ b/angular-app/src/styles.scss
@@ -83,6 +83,10 @@ i {
     vertical-align: middle;
 }
 
+.nowrap-table {
+    white-space: nowrap;
+}
+
 .popularity-wrapper {
     position: relative;
     width: 50px;
